# Tissaia

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  biome.json  build-fast.bat  eslint.config.js  index.html  launch-release.cmd  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml
.serena/: project.yml
.storybook/: main.ts  manager.ts  preview.ts
e2e/: app.spec.ts  comprehensive.spec.ts  debug_custom.spec.ts  error-handling.spec.ts  full_workflow.spec.ts  keyboard-a11y.spec.ts  performance.spec.ts  restoration-flow.spec.ts  settings_check.spec.ts  visual.spec.ts  workflow.spec.ts
scripts/: kill-port.cjs
server/: Cargo.toml  Dockerfile  fly.toml
server/src/: ai.rs  handlers.rs  main.rs  models.rs  state.rs
src/: App.tsx  i18n.ts  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  commands.rs  lib.rs  main.rs  models.rs  state.rs
src/__tests__/: setup.ts
src/__tests__/integration/: ThemeContext.test.tsx
src/__tests__/integration/components/: AnalysisProgressBar.test.tsx  BrowserModeWarning.test.tsx  Header.test.tsx  ModelSelector.test.tsx  ProgressBar.test.tsx  Sidebar.test.tsx  Skeleton.test.tsx
src/__tests__/integration/restoration/: RestorationWorkflow.test.tsx
src/__tests__/integration/views/: AnalyzeView.test.tsx  HealthView.test.tsx  HistoryView.test.tsx  RestoreView.test.tsx  ResultsView.test.tsx  SettingsView.test.tsx  UploadView.test.tsx
src/__tests__/mocks/: tauri.mock.ts
src/__tests__/unit/hooks/: useApi.test.tsx  useApiModels.test.ts  useDebounce.test.ts  useHotkey.test.ts  useKeyboardShortcuts.test.ts  useLocalStorage.test.ts  useThemeClass.test.ts  useViewTheme.test.ts
src/__tests__/unit/services/: pipeline.test.ts
src/__tests__/unit/services/tissaia/: config.test.ts  logger.test.ts  stages.test.ts  types.test.ts
src/__tests__/unit/store/: useAppStore.test.ts
src/__tests__/unit/utils/: index.test.ts  tauri.test.ts
src/__tests__/utils/: renderWithProviders.tsx  testFactories.ts
src/components/: Header.tsx  HealthView.tsx  HistoryView.tsx  SettingsView.tsx  Sidebar.tsx  TissaiaPanel.tsx  index.ts
src/components/photo/: AnalyzeView.tsx  CropView.tsx  RestoreView.tsx  ResultsView.tsx  UploadView.tsx
src/components/ui/: AnalysisProgressBar.tsx  Badge.tsx  BrowserModeWarning.tsx  Button.tsx  Card.tsx  ErrorBoundary.tsx  FallingRunes.tsx  ImageLightbox.tsx  ModelSelector.tsx  PhotoPreview.tsx  ProgressBar.tsx  Skeleton.tsx  StatusIndicator.tsx  VerificationBadge.tsx  index.ts
src/constants/: defaults.ts
src/contexts/: ThemeContext.tsx  index.ts
src/hooks/: index.ts  useApi.ts  useDebounce.ts  useHotkey.ts  useKeyboardShortcuts.ts  useLocalStorage.ts  usePipeline.ts  useThemeClass.ts  useViewTheme.ts
src/hooks/api/: index.ts  mocks.ts  queryKeys.ts  types.ts  useAnalysis.ts  useCrop.ts  useHealth.ts  useHistory.ts  useModels.ts  useRestoration.ts  useSettings.ts  useVerification.ts  utils.ts
src/locales/: en.json  pl.json
src/services/persistence/: indexeddb.ts
src/services/pipeline/: blob-manager.ts  browser-crop.ts  browser-detect.ts  config.ts  events.ts  index.ts  pipeline.ts  types.ts
src/services/tissaia/: config.ts  index.ts  logger.ts  pipeline.ts  stage1-ingestion.ts  stage2-detection.ts  stage3-smartcrop.ts  stage4-alchemy.ts  types.ts
src/services/tissaia/algorithms/: connected-components.ts  convolution.ts  edge-detection.ts  enhancement.ts  index.ts  quality.ts
src/services/tissaia/stages/: index.ts
src/services/tissaia/stages/alchemy/: enhancement.ts  index.ts  inpainting.ts  quality.ts  reassembly.ts  restore.ts
src/services/tissaia/stages/detection/: cutmap.ts  damage-detection.ts  detect.ts  edge-detection.ts  helpers.ts  index.ts  object-detection.ts  region-analysis.ts
src/services/tissaia/stages/ingestion/: format-detection.ts  index.ts  ingest.ts  loader.ts  metadata.ts  utils.ts  validation.ts
src/services/tissaia/stages/smartcrop/: helpers.ts  index.ts  shards.ts  smartcrop.ts  strategies.ts
src/services/tissaia/types/: alchemy.ts  basic.ts  detection.ts  guards.ts  index.ts  ingestion.ts  pipeline.ts  smartcrop.ts
src/services/tissaia/utils/: canvas.ts  geometry.ts  index.ts  pixel.ts
src/store/: index.ts  useAppStore.ts  useJobStore.ts  useOptionsStore.ts  usePhotoStore.ts  usePipelineStore.ts  useSettingsStore.ts  useViewStore.ts
src/stories/: Header.stories.tsx  HealthView.stories.tsx  HistoryView.stories.tsx  Introduction.mdx  ProgressBar.stories.tsx  SettingsView.stories.tsx  Sidebar.stories.tsx  Skeleton.stories.tsx  UploadView.stories.tsx
src/utils/: index.ts  schemas.ts  tauri.ts
