[package]
name = "tissaia-server"
version = "4.0.0"
description = "Tissaia AI Studio — Standalone Web Server (Axum)"
authors = ["Paweł Serkowski"]
license = "MIT"
repository = "https://github.com/user/tissaia-ai"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "tissaia-server"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["json", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# Async Runtime (full features for standalone server)
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "signal"] }

# HTTP Client (for AI API calls)
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 for image encoding
base64 = "0.22"

# Environment variables
dotenvy = "0.15"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Image processing
image = { version = "0.25", optional = true, default-features = false, features = ["jpeg", "png", "webp"] }

# EXIF metadata parsing
kamadak-exif = { version = "0.5", optional = true }

[features]
default = ["image-processing"]
image-processing = ["image", "kamadak-exif"]

# Release profile — balanced speed/optimization
[profile.release]
strip = true
lto = "thin"
codegen-units = 8
panic = "abort"
opt-level = 2
incremental = true

# Dev profile — fastest builds
[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 1

# Maximum optimization (for Fly.io production binary)
[profile.release-max]
inherits = "release"
lto = true
codegen-units = 1
opt-level = "z"
incremental = false
