[package]
name = "tissaia-ai"
version = "3.0.0"
description = "Tissaia AI Studio - Photo Restoration with AI"
authors = ["Paweł Serkowski"]
license = "MIT"
repository = "https://github.com/user/tissaia-ai"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tissaia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"

# Async Runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 for image encoding
base64 = "0.22"

# Environment variables
dotenvy = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Image processing (optional, for local manipulation)
image = { version = "0.25", optional = true }

[features]
default = ["image-processing"]
image-processing = ["image"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
