[package]
name = "tissaia-ai"
version = "3.0.0"
description = "Tissaia AI Studio - Photo Restoration with AI"
authors = ["Paweł Serkowski"]
license = "MIT"
repository = "https://github.com/user/tissaia-ai"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tissaia_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"

# Async Runtime
tokio = { version = "1.43", features = ["rt", "sync"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 for image encoding
base64 = "0.22"

# Environment variables
dotenvy = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Image processing (optional, for local manipulation)
# Only enable needed formats to speed up compilation
image = { version = "0.25", optional = true, default-features = false, features = ["jpeg", "png", "webp"] }

[features]
default = ["image-processing"]
image-processing = ["image"]

# Fast release profile (default) - balanced speed/optimization
[profile.release]
strip = true
lto = "thin"        # Faster than full LTO, still good optimization
codegen-units = 8   # More parallel compilation (faster builds)
panic = "abort"
opt-level = 2       # Good optimization, faster than opt-level 3
incremental = true  # Enable incremental compilation for rebuilds

# Dev profile - fastest builds for development
[profile.dev]
opt-level = 0
debug = true
incremental = true  # Fast rebuilds
codegen-units = 256 # Maximum parallelization

# Dev dependencies compiled with some optimization (faster runtime)
[profile.dev.package."*"]
opt-level = 1

# Maximum optimization profile (for final distribution)
[profile.release-max]
inherits = "release"
lto = true          # Full LTO for smallest binary
codegen-units = 1   # Best optimization, slowest build
opt-level = "z"     # Optimize for size
incremental = false # No incremental for final builds
